html markup donet

--- a/index.html
+++ b/index.html
@@ -1,13 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>New Year New Me</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-half"></div>
+          <div class="col-half">
+            <div class="header__text--wrapper">
+              <h1 class="header__main--title">
+                All Thinks Are Possible If You believe
+              </h1>
+              <p class="header__description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words
+              </p>
+              <div class="button__wrapper">
+                <a href="#" class="btn btn--primary">Contact Us</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- failures section start -->
+      <section class="section__padding" id="failures__section">
+        <div class="container">
+          <div class="row">
+            <div class="col-half">
+              <div class="image__wrapper">
+                <img src="./images/person.png" alt="person image" />
+              </div>
+            </div>
+            <div class="col-half">
+              <div class="content__wrapper">
+                <h2 class="section__title">My failures of previous year</h2>
+                <div class="section__description">
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text. It has roots in a piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock.
+                </div>
+                <ul class="failures__items">
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular belief, is not simply.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular belief.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular, is not simply.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular belief, is not simply.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular simply.</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- failures section end -->
+
+      <!-- My plans section start -->
+      <section class="section__padding" id="plans__section">
+        <div class="container">
+          <div class="section__top">
+            <h2 class="section__title">My Plans</h2>
+          </div>
+          <div class="row">
+            <div class="col-one-forth">
+              <div class="plan__wrapper">
+                <div class="image__wrapper">
+                  <img src="" alt="" />
+                </div>
+                <h3 class="plan__title">Web Developer</h3>
+                <p class="plan_desc">I want to start</p>
+              </div>
+            </div>
+            <div class="col-one-forth">
+              <div class="plan__wrapper">
+                <div class="image__wrapper">
+                  <img src="" alt="" />
+                </div>
+                <h3 class="plan__title">Javascript</h3>
+                <p class="plan_desc">I want to learn</p>
+              </div>
+            </div>
+            <div class="col-one-forth">
+              <div class="plan__wrapper">
+                <div class="image__wrapper">
+                  <img src="" alt="" />
+                </div>
+                <h3 class="plan__title">Smoking Habit</h3>
+                <p class="plan_desc">I want to end</p>
+              </div>
+            </div>
+            <div class="col-one-forth">
+              <div class="plan__wrapper">
+                <div class="image__wrapper">
+                  <img src="" alt="" />
+                </div>
+                <h3 class="plan__title">ecommerce</h3>
+                <p class="plan_desc">I want to develop</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- My plans section end -->
+
+      <!-- positive mind start -->
+      <section class="section__padding" id="positive__mind">
+        <div class="container">
+          <div class="positive__mind--inner">
+            <h2 class="section__title"></h2>
+            <div class="button__wrapper">
+              <a href="tel:#" class="btn btn--primary">Call Now</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- positive mind end -->
+    </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-half">
+            <div class="contact__wrapper">
+              <h2 class="footer__title">Future</h2>
+              <p class="section__description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words
+              </p>
+              <ul class="contact__info">
+                <li>
+                  <span>Email</span
+                  ><a href="mailto:xyz@gmail.com">xyz@gmail.com</a>
+                </li>
+                <li>
+                  <span>Phone</span><a href="tel:0123456789">0123456789</a>
+                </li>
+              </ul>
+              <ul class="social__icons">
+                <li>
+                  <a href="http://facebook.com"
+                    ><img src="./images/icons/fb.png" alt="facebook icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="http://twitter.com"
+                    ><img src="./images/icons/twitter.png" alt="twitter icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="http://youtube.com"
+                    ><img src="./images/icons/youtube.png" alt="youtube icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-half">
+            <div class="subscribe__wrapper">
+              <h4 class="footer__title">Subscribe</h4>
+              <form action="">
+                <input type="email" name="email" id="email" />
+                <input
+                  class="btn btn--secondary"
+                  type="submit"
+                  value="Subscribe"
+                />
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
