--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/5adceddaa0.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/style.css" />
     <title>New Year New Me</title>
   </head>
@@ -34,7 +38,7 @@
       <!-- failures section start -->
       <section class="section__padding" id="failures__section">
         <div class="container">
-          <div class="row">
+          <div class="row vertical__end">
             <div class="col-half">
               <div class="image__wrapper">
                 <img src="./images/person.png" alt="person image" />
@@ -43,11 +47,11 @@
             <div class="col-half">
               <div class="content__wrapper">
                 <h2 class="section__title">My failures of previous year</h2>
-                <div class="section__description">
+                <p class="section__description">
                   Contrary to popular belief, Lorem Ipsum is not simply random
                   text. It has roots in a piece of classical Latin literature
                   from 45 BC, making it over 2000 years old. Richard McClintock.
-                </div>
+                </p>
                 <ul class="failures__items">
                   <li class="icon_item">
                     <i class="fa-solid fa-check"></i>
@@ -83,39 +87,31 @@
           <div class="section__top">
             <h2 class="section__title">My Plans</h2>
           </div>
-          <div class="row">
+          <div class="row justify__center">
             <div class="col-one-forth">
               <div class="plan__wrapper">
-                <div class="image__wrapper">
-                  <img src="" alt="" />
-                </div>
+                <img src="./images/icons/web.png" alt="" />
                 <h3 class="plan__title">Web Developer</h3>
                 <p class="plan_desc">I want to start</p>
               </div>
             </div>
             <div class="col-one-forth">
               <div class="plan__wrapper">
-                <div class="image__wrapper">
-                  <img src="" alt="" />
-                </div>
+                <img src="./images/icons/js.png" alt="" />
                 <h3 class="plan__title">Javascript</h3>
                 <p class="plan_desc">I want to learn</p>
               </div>
             </div>
             <div class="col-one-forth">
               <div class="plan__wrapper">
-                <div class="image__wrapper">
-                  <img src="" alt="" />
-                </div>
+                <img src="./images/icons/smoke.png" alt="" />
                 <h3 class="plan__title">Smoking Habit</h3>
                 <p class="plan_desc">I want to end</p>
               </div>
             </div>
             <div class="col-one-forth">
               <div class="plan__wrapper">
-                <div class="image__wrapper">
-                  <img src="" alt="" />
-                </div>
+                <img src="./images/icons/ecom.png" alt="" />
                 <h3 class="plan__title">ecommerce</h3>
                 <p class="plan_desc">I want to develop</p>
               </div>
@@ -129,7 +125,7 @@
       <section class="section__padding" id="positive__mind">
         <div class="container">
           <div class="positive__mind--inner">
-            <h2 class="section__title"></h2>
+            <h2 class="section__title">Awlays keep a positive mindset</h2>
             <div class="button__wrapper">
               <a href="tel:#" class="btn btn--primary">Call Now</a>
             </div>
@@ -144,18 +140,18 @@
           <div class="col-half">
             <div class="contact__wrapper">
               <h2 class="footer__title">Future</h2>
-              <p class="section__description">
+              <p class="footer__description">
                 There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form, by
                 injected humour, or randomised words
               </p>
               <ul class="contact__info">
                 <li>
-                  <span>Email</span
+                  <span>Email : </span
                   ><a href="mailto:xyz@gmail.com">xyz@gmail.com</a>
                 </li>
                 <li>
-                  <span>Phone</span><a href="tel:0123456789">0123456789</a>
+                  <span>Phone : </span><a href="tel:0123456789">0123456789</a>
                 </li>
               </ul>
               <ul class="social__icons">
@@ -179,15 +175,22 @@
           </div>
           <div class="col-half">
             <div class="subscribe__wrapper">
-              <h4 class="footer__title">Subscribe</h4>
-              <form action="">
-                <input type="email" name="email" id="email" />
-                <input
-                  class="btn btn--secondary"
-                  type="submit"
-                  value="Subscribe"
-                />
-              </form>
+              <div class="subscribe__inner">
+                <h4 class="footer__title">Subscribe</h4>
+                <form action="">
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="Enter your Email"
+                  />
+                  <input
+                    class="btn btn--secondary"
+                    type="submit"
+                    value="Subscribe"
+                  />
+                </form>
+              </div>
             </div>
           </div>
         </div>
