new section added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,52 @@
       </section>
       <!-- My plans section end -->
 
+      <!-- reverse section start -->
+      <section class="section__padding" id="failures__section">
+        <div class="container">
+          <div class="row vertical__end">
+            <div class="col-half">
+              <div class="content__wrapper">
+                <h2 class="section__title">My failures of previous year</h2>
+                <p class="section__description">
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text. It has roots in a piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock.
+                </p>
+                <ul class="failures__items">
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular belief, is not simply.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular belief.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular, is not simply.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular belief, is not simply.</span>
+                  </li>
+                  <li class="icon_item">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Contrary to popular simply.</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-half">
+                <div class="image__wrapper">
+                  <img src="./images/person.png" alt="person image" />
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- reverse section end -->
+
       <!-- positive mind start -->
       <section class="section__padding" id="positive__mind">
         <div class="container">
